--- a/RestIntegration/pom.xml
+++ b/RestIntegration/pom.xml
@@ -20,9 +20,9 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>com.opencsv</groupId>
-            <artifactId>opencsv</artifactId>
-            <version>5.7.1</version>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+            <version>1.10.0</version>
         </dependency>
     </dependencies>
     <properties>
